[workspace]
resolver = "2"
members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Shared dependencies can go here
